# unified-projects

./: .env  .sqltoolsrc.json  README.md  docker-compose.yml  fix-eslint-extension.sh
.github/workflows/: task-manager-ci.yml
docs/: stripe-integration-plan.md
free-ecommerce-store/: .env.example  .gitignore  README.md
free-ecommerce-store/config/: .htaccess  robots.txt
free-ecommerce-store/docs/: api-keys-setup.md  deployment-guide.md  security-best-practices.md
free-ecommerce-store/scripts/bash/: deploy.sh
free-ecommerce-store/scripts/python/: ai_content_generator.py  product_import.py
free-ecommerce-store/templates/csv/: product-import-template.csv
free-ecommerce-store/templates/emails/: order-confirmation.html  review-request.html  shipment-notification.html
free-ecommerce-store/templates/invoices/: invoice-template.html
free-ecommerce-store/wp-content/plugins/custom-scripts/: ai-agent.php  cron-jobs.php  order-fulfillment.php  product-import.php  stock-sync.php
monitoring/: prometheus.yml
omnicore-dashboard/: Dockerfile  nginx.conf  package.json
pinnacle-ai-platform/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  manage.py  pyproject.toml  requirements-core.txt  requirements-essential-minimal.txt  requirements-essential.txt  requirements-minimal.txt  requirements-pyarrow-free.txt  requirements.txt  setup.py  test_ai_system.py
pinnacle-ai-platform/app/: main.py
pinnacle-ai-platform/app/agents/base/: base_agent.py
pinnacle-ai-platform/app/agents/executive/: ceo_agent.py
pinnacle-ai-platform/app/core/: config.py  database.py  logging.py
pinnacle-ai-platform/app/routes/: agents.py  auth.py  dashboard.py  health.py
pinnacle-ai-platform/app/services/: agent_orchestrator.py  llm_service.py  memory_service.py  monitoring.py
pinnacle-ai-platform/dashboard/: index.html
pinnacle-ai-platform/dashboard/css/: autocomplete.css  components.css  dashboard.css  styles.css
pinnacle-ai-platform/dashboard/js/: agents.js  auth.js  charts.js  main.js  notifications.js  websocket.js
pinnacle-ai-platform/dashboard/js/autocomplete/: core.js  index.js
pinnacle-ai-platform/dashboard/js/autocomplete/components/: base.js  code-editor-autocomplete.js  input-autocomplete.js  search-autocomplete.js
pinnacle-ai-platform/docs/: ADD_OPENCV.md
pinnacle-ai-platform/docs/api/: README.md
pinnacle-ai-platform/scripts/: cli.py  dev_startup.sh  setup_project.py  validate_installation.py
pinnacle-ai-platform/src/api/v1/: __init__.py  agents.py  api.py  autocomplete.py  ecommerce.py  payments.py  subscriptions.py
pinnacle-ai-platform/src/core/: logging.py
pinnacle-ai-platform/src/core/ai/: __init__.py  agent_manager.py  ai_service.py  cli.py  database_integration.py  engine.py  modes.py  multi_core_engine.py  multi_modal.py  task_queue.py  types.py
pinnacle-ai-platform/src/core/autocomplete/: __init__.py  cache.py  context.py  service.py
pinnacle-ai-platform/src/core/autocomplete/providers/: ai_agent.py  api_endpoint.py  base.py  cli.py  config.py  database.py  search.py  ui.py
pinnacle-ai-platform/src/core/config/: __init__.py  settings.py
pinnacle-ai-platform/src/core/database/: __init__.py  ecommerce_models.py  manager.py
pinnacle-ai-platform/src/core/middleware/: usage_tracking.py
pinnacle-ai-platform/src/core/payments/: stripe_integration.py
pinnacle-ai-platform/src/core/subscriptions/: subscription_manager.py
pinnacle-ai-platform/storefront/: index.html  test.html
pinnacle-ai-platform/storefront/css/: autocomplete.css  components.css  responsive.css  styles.css
pinnacle-ai-platform/storefront/js/: api.js  cart.js  categories.js  main.js  products.js  search.js  storefront.js
pinnacle-ai-platform/storefront/js/autocomplete/: core.js  index.js
pinnacle-ai-platform/storefront/js/autocomplete/components/: base.js  product-search-autocomplete.js
pinnacle-ai-platform/tests/: test_payments.py
shared-services/analytics/: Dockerfile  analytics-service.py  payment-analytics.py  requirements.txt
shared-services/compliance/: Dockerfile  compliance-engine.py  compliance-service.py  requirements.txt
shared-services/payment-security/: Dockerfile  fraud-detection.py  requirements.txt  security-monitor.py  security-service.py
shared-services/payment-webhooks/: Dockerfile  docker-compose.yml  reconciliation-engine.py  requirements.txt  retry-engine.py  webhook-handler.py
task-manager-app/: .env.example  .eslintrc.js  .gitignore  README.md  TODO.md  architecture.md  package-lock.json  package.json  requirements.md
task-manager-app/firefox-extension/: manifest.json  popup.css  popup.html  popup.js
task-manager-app/server/: .env.example  Dockerfile  logger.js  package-lock.json  package.json  server.js  swagger.js
task-manager-app/server/middleware/: auth.js  errorHandler.js  sanitization.js  validation.js
task-manager-app/server/models/: Category.js  Task.js  User.js
task-manager-app/server/routes/: auth.js  categories.js  statistics.js  tasks.js
task-manager-app/server/services/: emailService.js  monitoringService.js
task-manager-app/server/tests/: auth.test.js  categories.test.js  category.test.js  models.test.js  task.test.js  tasks.test.js
traefik/: dynamic.yml  traefik.yml
